<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dimen_10_dp"
        android:paddingRight="@dimen/dimen_10_dp">



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_15_dp"
                android:text="@string/address_zone"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_zone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_15_dp"
                android:hint="[Enter the zone]"
                android:background="@drawable/bg_edittext"
                android:inputType="text"
                android:padding="@dimen/dimen_10_dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_15_dp"
                android:text="@string/address_district"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_15_dp"
                android:hint="[Enter the district]"
                android:background="@drawable/bg_edittext"
                android:inputType="text"
                android:padding="@dimen/dimen_10_dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_15_dp"
                android:text="@string/address_area"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_15_dp"
                android:hint="[Enter the area]"
                android:background="@drawable/bg_edittext"
                android:inputType="text"
                android:padding="@dimen/dimen_10_dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_15_dp"
                android:text="Age"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_15_dp"
                android:hint="[Enter the age]"
                android:background="@drawable/bg_edittext"
                android:inputType="text"
                android:padding="@dimen/dimen_10_dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_15_dp"
                android:id="@+id/tv_number_of_messages"
                android:text="(Your message will be sent to 23 recipients)"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_15_dp"
                android:text="Message"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_15_dp"
                android:lines="4"
                android:minLines="4"
                android:inputType="textMultiLine"
                android:hint="[Enter your message]"
                android:background="@drawable/bg_edittext"
                android:padding="@dimen/dimen_10_dp" />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:onClick="done"
                android:text="NEXT" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>